# codex-apc

./: .gitignore  .index-ignore  AGENTS.md  DISTRO.md  Dockerfile.ci  README.md
.github/workflows/: ci.yml  prune-artifacts.yml  release.yml  upstream-sync.yml
codex-acp/: Cargo.toml  README.md
codex-acp/src/: agent.rs  lib.rs  review_persist.rs
codex-acp/src/agent/: commands.rs
codex-agentic/: Cargo.toml
codex-agentic/src/: main.rs
codex-agentic/src/indexing/: mod.rs
codex-agentic/tests/: cli.rs
codex-tui/: Cargo.toml
codex-tui/src/: app.rs  app_event.rs  chatwidget.rs  cli.rs  history_cell.rs  lib.rs  main.rs  markdown_stream.rs  rate_limits_view.rs  review_codebase.rs  shimmer.rs  slash_command.rs  status_indicator_widget.rs  updates.rs
codex-tui/src/bottom_pane/: chat_composer.rs  mod.rs
codex-tui/src/chatwidget/: tests.rs
codex-tui/src/streaming/: controller.rs
docs/: CI-PREFLIGHT.md  PROGRESS-INDEXING.md  claude-code-review.md  claude-codex-agentic-codebase-indexing-prd.md  code-review.md  codex-agentic-codebase-indexing-prd.md  codex-agentic-codebase-indexing-spec.md  gemini-codex-agentic-codebase-indexing-prd.md  todo-review-codebase-implementation.md
docs/orchestrator/: orchestration-workflow-management-prd.md
package/: README-agentic.md  README.md
scripts/: ci-docker.sh  ci-local.sh  codex-acp.sh  codex-agentic.sh  install.sh  sync-upstream.sh
