[package]
name = "codex-acp"
# authors field is optional for Cargo projects and not required for builds.
# It has been removed to avoid outdated personal emails in manifests.
version = "0.39.0-apc.6"
edition = "2024"
description = "ACP-compatible agent that bridges the OpenAI Codex runtime with ACP clients over stdio."
readme = "README.md"
# Match the pinned toolchain in rust-toolchain.toml
rust-version = "1.89"

[dependencies]
agent-client-protocol = { version = "0.4.0" }
anyhow = { version = "1" }
async-trait = { version = "0.1" }
chrono = { version = "0.4", features = ["serde"] }
codex-cli = { git = "https://github.com/openai/codex", rev = "c415827a" }
codex-core = { git = "https://github.com/openai/codex", rev = "c415827a" }
codex-ollama = { git = "https://github.com/openai/codex", package = "codex-ollama", rev = "c415827a" }
codex-protocol = { git = "https://github.com/openai/codex", rev = "c415827a" }
tokio = { version = "1.47.1", features = [
  "macros",
  "rt",
  "time",
  "io-std",
  "io-util",
  "net",
  "process",
  "sync",
] }
tokio-util = { version = "0.7.16", features = ["compat"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1" }
toml = "0.9"
fastembed = "5"
memmap2 = "0.9"
rayon = "1.10"
