[package]
name = "codex-agentic"
version = "0.39.0-apc.9"
edition = "2024"
description = "Combined launcher: upstream Codex CLI by default, ACP mode with --acp"
repository = "https://github.com/macinations-au/codex-apc"

[dependencies]
regex = "1"
anyhow = "1"
codex-acp = { path = "../codex-acp" }
toml = "0.9"
codex-core = { git = "https://github.com/openai/codex", rev = "c415827a" }
codex-ollama = { git = "https://github.com/openai/codex", package = "codex-ollama", rev = "c415827a" }
codex-protocol = { git = "https://github.com/openai/codex", rev = "c415827a" }
tokio = { version = "1.47.1", features = ["rt","time","io-std","io-util"] }
codex-tui = { path = "../codex-tui" }
clap = { version = "4", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"
fastembed = "5"
hnsw_rs = "0.3"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
pathdiff = "0.2"

[features]
default = []
# If upstream exposes a public library API for the CLI, we can enable this
# and call into it directly rather than exec'ing an external binary.
embed_upstream_cli = []


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
