[package]
edition = "2024"
name = "codex-tui"
version = "0.39.0-apc.0"

[[bin]]
name = "codex-tui"
path = "src/main.rs"

[lib]
name = "codex_tui"
path = "src/lib.rs"

[features]
# Enable vt100-based tests (emulator) when running with `--features vt100-tests`.
vt100-tests = ["dep:vt100"]
# Gate verbose debug logging inside the TUI implementation.
debug-logs = []



[dependencies]
anyhow = "1"
async-stream = "0.3.6"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
codex-ansi-escape = { git = "https://github.com/openai/codex" }
codex-arg0 = { git = "https://github.com/openai/codex" }
codex-common = { git = "https://github.com/openai/codex", features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
codex-core = { git = "https://github.com/openai/codex" }
codex-file-search = { git = "https://github.com/openai/codex" }
codex-login = { git = "https://github.com/openai/codex" }
codex-ollama = { git = "https://github.com/openai/codex" }
codex-protocol = { git = "https://github.com/openai/codex" }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = [
    "bracketed-paste",
    "event-stream",
] }
dirs = "6"
diffy = "0.4.2"
image = { version = "^0.25.8", default-features = false, features = [
    "jpeg",
    "png",
] }
itertools = "0.14.0"
lazy_static = "1"
mcp-types = { git = "https://github.com/openai/codex" }
once_cell = "1"
path-clean = "1.0.1"
rand = "0.9"
ratatui = { version = "0.29.0", features = [
    "scrolling-regions",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
shlex = "1.3.0"
strum = "0.27.2"
strum_macros = "0.27.2"
supports-color = "3.0.2"
tempfile = "3"
textwrap = "0.16.2"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
pulldown-cmark = "0.10"
unicode-segmentation = "1.12.0"
unicode-width = "0.1"
url = "2"
pathdiff = "0.2"
owo-colors = "4.2.0"
toml_edit = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Clipboard support via `arboard` is not available on Android/Termux.
# Only include it for non-Android targets so the crate builds on Android.
[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"


[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
insta = "1.43.2"
pretty_assertions = "1"
rand = "0.9"

# Keep vt100 available for test builds to avoid widespread cfg-gating in tests.
vt100 = "0.15.2"

[dependencies.vt100]
version = "0.15.2"
optional = true
